# metrique

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: audit.yml
docs/: aggregated.md  entry-descriptors-changelog.md  entry-descriptors-impl-plan.md  entry-descriptors-review.md  entry-descriptors.md
metrique/: Cargo.toml  README.md
metrique-aggregation/: Cargo.toml  README.md
metrique-aggregation/examples/: embedded.rs
metrique-aggregation/src/: aggregator.rs  histogram.rs  traits.rs
metrique-aggregation/src/sink/: worker.rs
metrique-aggregation/tests/: descriptor.rs
metrique-core/: Cargo.toml
metrique-core/src/: inflectable_entry_impls.rs  lib.rs  namestyle.rs
metrique-macro/: Cargo.toml
metrique-macro/src/: aggregate.rs  entry_impl.rs  enums.rs  inflect.rs  lib.rs  structs.rs  value_impl.rs
metrique-macro/src/entry_impl/: enum_impl.rs  struct_impl.rs
metrique-macro/src/snapshots/: metrique_macro__tests__debug_derive_passthrough_struct.snap  metrique_macro__tests__entry_enum.snap  metrique_macro__tests__entry_enum_tag.snap  metrique_macro__tests__entry_enum_tag_sample_group.snap  metrique_macro__tests__exact_prefix_struct.snap  metrique_macro__tests__field_exact_prefix_struct.snap  metrique_macro__tests__field_inflectable_prefix_struct.snap  metrique_macro__tests__metrics_with_cow_lifetime.snap  metrique_macro__tests__metrics_with_lifetime.snap  metrique_macro__tests__sample_group_entry_enum.snap  metrique_macro__tests__sample_group_metrics_struct.snap  metrique_macro__tests__sample_group_metrics_value_struct.snap  metrique_macro__tests__simple_metrics_enum.snap  metrique_macro__tests__simple_metrics_struct.snap  metrique_macro__tests__simple_metrics_value_struct.snap  metrique_macro__tests__simple_metrics_value_unnamed_struct.snap  metrique_macro__tests__subfield_struct.snap
metrique-metricsrs/: Cargo.toml
metrique-otel/: Cargo.toml
metrique-otel/examples/: otlp_aggregated.rs  otlp_grpc.rs
metrique-otel/src/: lib.rs  metrics.rs  tags.rs  translator.rs
metrique-otel/tests/: aggregation.rs
metrique-service-metrics/: Cargo.toml
metrique-util/: Cargo.toml  README.md
metrique-util/src/: dynamic_inflection.rs  lib.rs  pending_sink.rs  state.rs  tokio_metrics_reporter.rs
metrique-util/tests/: state.rs
metrique-writer/: Cargo.toml  README.md
metrique-writer-core/: Cargo.toml
metrique-writer-core/src/: descriptor.rs  global.rs  lib.rs
metrique-writer-core/src/entry/: boxed.rs  mod.rs
metrique-writer-core/src/value/: force.rs  mod.rs
metrique-writer-format-emf/: Cargo.toml
metrique-writer-format-emf/src/: emf.rs
metrique-writer-format-emf/tests/: misc.rs
metrique-writer-format-json/: Cargo.toml
metrique-writer-format-json/src/: json.rs
metrique-writer-macro/: Cargo.toml
metrique-writer/src/: lib.rs  test_util.rs
metrique-writer/src/sink/: mod.rs
metrique/docs/: cookbook.md  emf.md  sinks.md
metrique/examples/: enums.rs  global-state.rs  tokio-metrics.rs
metrique/src/: lib.rs  local.rs  slot.rs  timers.rs
metrique/tests/: cargo-toml-format.rs  descriptor.rs  enum_attributes.rs  enum_basic.rs  enum_precedence.rs
metrique/tests/ui/fail/: bad_metrics_value.stderr  conflicting_field_tags.rs  conflicting_field_tags.stderr  enum_kitchen_sink.rs  enum_kitchen_sink.stderr  guard_not_send_sync.stderr  subfield_no_metric.stderr  timesource_guard_not_send_sync.stderr
scripts/: check-docsrs.sh
