[workspace]
resolver = "3"
members = [
    "metrique",
    "metrique-aggregation",
    "metrique-core",
    "metrique-macro",
    "metrique-metricsrs",
    "metrique-service-metrics",
    "metrique-timesource",
    "metrique-util",
    "metrique-writer",
    "metrique-writer-core",
    "metrique-writer-format-emf",
    "metrique-writer-format-json",
    "metrique-writer-macro",
]

[workspace.dependencies]
ahash = "0.8.6"
anyhow = "1.0.98"
assert-json-diff = "2"
assert2 = "0.3"
assert_approx_eq = "1.1.0"
bit-set = "0.8"
chrono = "0.4"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
darling = "0.23"
derive-where = "1"
dtoa = "1"
enum-map = "2"
futures = { version = "0.3", default-features = false }
hashbrown = "0.16"
histogram = "0.11"
Inflector = "0.11.4"
insta = "1.36"
itertools = { version = "0.14", default-features = false }
itoa = "1.0.15"
jiff = "0.2"
metrics_024 = { package = "metrics", version = "0.24" }
metrics-util_020 = { package = "metrics-util", version = "0.20" }
ordered-float = "5.1.0"
pin-project = "1"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9"
rand_chacha = "0.9"
regex-lite = "0.1"
rstest = "0.26"
rustversion = "1.0.20"
ryu = "1.0.20"
serde = "1"
serde_json = "1.0.141"
smallvec = "1.13.1"
str_inflector = "0.12"
strum_macros = "0.27"
syn = "2.0"
synstructure = "0.13"
tempfile = "3"
tokio = { version = "1.38", default-features = false }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-appender = "0.2"
tracing-subscriber = "0.3.20"
trybuild = "1.0"
toml = "0.9"
walkdir = "2"

# External crates that depend on metrique pull it from crates.io, while workspace
# members use local paths. Without these patches, Cargo treats them as separate
# crates, causing duplicate type errors. Only affects workspace builds.
[patch.crates-io]
metrique = { path = "metrique" }
metrique-core = { path = "metrique-core" }
metrique-macro = { path = "metrique-macro" }
metrique-timesource = { path = "metrique-timesource" }
metrique-writer = { path = "metrique-writer" }
metrique-writer-core = { path = "metrique-writer-core" }
metrique-writer-macro = { path = "metrique-writer-macro" }
