[package]
name = "metrique-aggregation"
version = "0.1.11"
edition = "2024"
rust-version = "1.89" # build.yml
license = "Apache-2.0"
description = "Library for working with unit of work metrics - aggregation"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
metrique = { workspace = true, features = ["service-metrics"] }
metrique-writer = { workspace = true, features = ["background-queue", "tracing-subscriber-03", "metrics-rs-024"] }
metrique-core = { workspace = true }
metrique-macro = { workspace = true }
smallvec.workspace = true
histogram.workspace = true
ordered-float.workspace = true
metrique-writer-core = { workspace = true, features = ["serde"] }
tokio = { workspace = true, default-features = false, features = ["sync"] }
metrique-timesource = { workspace = true, features = ["test-util"] }
hashbrown.workspace = true

[dev-dependencies]
metrique = { workspace = true, features = ["test-util", "emf", "local-format"] }
divan = "0.1"
insta = { workspace = true }
serde_json = { workspace = true }
rand.workspace = true
rand_chacha.workspace = true
assert2.workspace = true
rstest.workspace = true
trybuild.workspace = true
rustversion.workspace = true
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[features]
# There seems to be a rustdoc bug where when a dev dependency enables a new feature, its not picked up properly
__build_examples_for_rustdoc = ["metrique/emf", "metrique/test-util"]

# We need to name one example so that our examples that use dev-dependencies get scraped
[[example]]
name = "embedded"
doc-scrape-examples = true
requires_features = ["__build_examples_for_rustdoc"]

[[example]]
name = "local-webserver"
doc-scrape-examples = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[bench]]
name = "aggregation"
harness = false
