[package]
name = "metrique-macro"
version = "0.1.16"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for wide event metrics - #[metrics] macro"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
Inflector = { workspace = true }
darling = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }
metrique = { workspace = true, features = ["test-util"] }
metrique-aggregation = { workspace = true }
assert2 = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
