[package]
name = "metrique-metricsrs"
version = "0.1.22"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for working with unit of work metrics - metrics.rs collector"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[features]
default = ["background-queue"]
metrics-rs-024 = [ "dep:metrics_024", "dep:metrics-util_020" ]
background-queue = [ "metrique-writer/background-queue" ]
test-util = []
# Required to allow docs to use links to tracing-appender
private-test-util = [ "dep:tracing-appender" ]

[dependencies]
histogram = { workspace = true }
pin-project = { workspace = true }
metrics_024 = { workspace = true, optional = true }
metrics-util_020 = { workspace = true, optional = true }
metrique-writer-core = { workspace = true }
metrique-writer = { workspace = true }
metrique-timesource = { workspace = true }
futures = { workspace = true, default-features = false, features = ["executor"] }
tokio = { workspace = true, default-features = false, features = [
    "sync", "time"
] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
derive-where = { workspace = true }
tracing-appender = { workspace = true, optional = true }

[dev-dependencies]
tracing-appender = { workspace = true }
metrique = { workspace = true, features = ["service-metrics"] }
metrique-timesource = { workspace = true, features = [
    "custom-timesource",
    "tokio",
    "test-util",
] }
metrique-writer = { workspace = true, features = ["test-util"] }
metrique-writer-core = { workspace = true, features = ["private-test-util"] }
metrique-writer-format-emf = { workspace = true }
metrique-metricsrs = { path = ".", features = ["metrics-rs-024", "test-util"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
rand = { workspace = true }
rstest = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
