[package]
name = "metrique-otel"
version = "0.0.0"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
description = "Library for wide event metrics - OpenTelemetry (OTLP) backend for metrique"
repository = "https://github.com/awslabs/metrique"
publish = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[dependencies]
metrique-writer-core = { workspace = true }
metrique-writer = { workspace = true, features = ["background-queue"] }
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = [
    "metrics",
    "rt-tokio",
] }
opentelemetry-otlp = { version = "0.32", features = [
    "grpc-tonic",
    "metrics",
] }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
metrique = { workspace = true }
metrique-aggregation = { workspace = true }
opentelemetry_sdk = { version = "0.32", features = ["testing"] }
tracing-subscriber = { workspace = true }
