[package]
name = "metrique-service-metrics"
version = "0.1.20"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for wide event metrics - writer-side interface"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
metrique-writer = { workspace = true, features = ["background-queue", "tracing-subscriber-03", "metrics-rs-024"] }

[dev-dependencies]

metrique = { workspace = true, features = ["service-metrics"] }
metrique-writer-format-emf = { workspace = true }

tracing-appender = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
