[package]
name = "metrique-writer-core"
version = "0.1.16"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for wide event metrics - writer-side interface core traits"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
smallvec = { workspace = true, features = ["union", "const_generics", "const_new"] }
itertools = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }
derive-where = { workspace = true }
tracing = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["rt"] }

[dev-dependencies]
assert-json-diff = { workspace = true }
metrique = { workspace = true, features = [] }
metrique-writer = { workspace = true, features = ["tracing-subscriber-03", "test-util"] }
metrique-writer-core = { path = ".", features = ["test-util"] }
tracing-appender = { workspace = true }
metrique-writer-format-emf = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
# Test utilities for testing metrics in applications
test-util = ["dep:tokio"]
# Private utilities for testing the formatter crates. 100% unstable, do not use outside of this workspace
# dep:tracing-appender is for rustdoc
private-test-util = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
