[package]
name = "metrique-writer-format-emf"
version = "0.1.20"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for working with unit of work metrics - Amazon CloudWatch Embedded Metric Format (EMF) formatter"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
bit-set = { workspace = true }
smallvec = { workspace = true, features = ["union", "const_generics", "const_new"] }
serde_json = { workspace = true }
dtoa = { workspace = true }
itoa = { workspace = true }
itertools = { workspace = true, default-features = true }
rand = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
metrique-writer-core = { path = "../metrique-writer-core", version = "0.1.15" }
metrique-writer = { path = "../metrique-writer", version = "0.1.21" }

[dev-dependencies]
assert-json-diff = { workspace = true }
assert_approx_eq = { workspace = true }
rand_chacha = { workspace = true }
rstest = { workspace = true }
metrique-metricsrs = { path = "../metrique-metricsrs", features = ["metrics-rs-024"] }
metrique-timesource = { path = "../metrique-timesource", features = [
    "custom-timesource",
    "tokio",
    "test-util",
] }
metrique-writer-core = { path = "../metrique-writer-core", features = ["private-test-util"] }
metrique-writer = { path = "../metrique-writer", features = ["test-util"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
metrics_024 = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
