[package]
name = "metrique-writer-format-emf"
version = "0.1.20"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for wide event metrics - Amazon CloudWatch Embedded Metric Format (EMF) formatter"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
bit-set = { workspace = true }
smallvec = { workspace = true, features = ["union", "const_generics", "const_new"] }
serde_json = { workspace = true }
dtoa = { workspace = true }
itoa = { workspace = true }
itertools = { workspace = true, default-features = true }
rand = { workspace = true }
hashbrown = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
metrique-writer-core = { workspace = true, features = ["serde"] }
metrique-writer = { workspace = true, features = ["background-queue", "tracing-subscriber-03", "metrics-rs-024"] }

[dev-dependencies]
assert-json-diff = { workspace = true }
assert_approx_eq = { workspace = true }
rand_chacha = { workspace = true }
rstest = { workspace = true }
metrique-metricsrs = { workspace = true, features = ["metrics-rs-024"] }
metrique-timesource = { workspace = true, features = [
    "custom-timesource",
    "tokio",
    "test-util",
] }
metrique-writer-core = { workspace = true, features = ["private-test-util"] }
metrique-writer = { workspace = true, features = ["test-util"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
metrics_024 = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
