[package]
name = "metrique-writer-format-json"
version = "0.1.3"
edition = "2024"
rust-version = "1.89"
license = "Apache-2.0"
description = "Library for working with unit of work metrics - Pure JSON formatter"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
itoa = { workspace = true }
dtoa = { workspace = true }
rand = { workspace = true }
metrique-writer-core = { path = "../metrique-writer-core", version = "0.1.15" }
metrique-writer = { path = "../metrique-writer", version = "0.1.21" }

[dev-dependencies]
metrique-writer-core = { path = "../metrique-writer-core", features = ["private-test-util"] }
metrique-writer = { path = "../metrique-writer", features = ["test-util"] }
rand_chacha = { workspace = true }
serde_json = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
