[package]
name = "metrique-writer-macro"
version = "0.1.9"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for wide event metrics - derive(Entry) macro"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
darling = { workspace = true }
str_inflector = { workspace = true }
synstructure = { workspace = true }
syn = { workspace = true }

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
