[package]
name = "metrique-writer"
version = "0.1.21"
edition = "2024"
rust-version = "1.89" # See build.yml for why this MSRV
license = "Apache-2.0"
description = "Library for working with unit of work metrics - writer-side interface"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"

[dependencies]
ahash = { workspace = true }
smallvec = { workspace = true, features = [
    "union",
    "const_generics",
    "const_new",
] }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
rand = { workspace = true }
crossbeam-queue = { workspace = true, optional = true }
crossbeam-utils = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, default-features = false, features = [
    "sync",
] }
tracing = { workspace = true, optional = true }
metrics_024 = { workspace = true, optional = true }
metrics-util_020 = { workspace = true, optional = true }
metrique-writer-core = { path = "../metrique-writer-core", version = "0.1.15" }
metrique-writer-macro = { path = "../metrique-writer-macro", version = "0.1.8" }
metrique-core = { path = "../metrique-core", version = "0.1.19" }
ordered-float = { workspace = true, optional = true }

[dev-dependencies]
enum-map = { workspace = true }
strum_macros = { workspace = true }
metrique-writer-core = { path = "../metrique-writer-core", features = [
    "private-test-util",
    "test-util",
] }
metrique-writer = { path = "../metrique-writer", features = ["test-util"] }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf" }
metrique-metricsrs = { path = "../metrique-metricsrs" }
metrique = { path = "../metrique" }
metrics-util_020 = { workspace = true, features = ["debugging"] }
futures = { workspace = true, features = ["executor"] }
tokio = { workspace = true, features = ["macros", "test-util"] }
tracing-appender = { workspace = true }
tempfile = { workspace = true }
assert_approx_eq = { workspace = true }
assert-json-diff = { workspace = true }
serde_json = { workspace = true }
rstest = { workspace = true }

[features]
default = [
    "background-queue",
    "tracing-subscriber-03",
    "metrics-rs-024",
]
test-util = ["metrique-writer-core/test-util", "dep:ordered-float"]
# Private utilities for testing the formatter crates. 100% unstable, do not use outside of this workspace
# dep:tracing-appender is for rustdoc
private-test-util = ["dep:tracing-appender"]
# Deprecated name of metrics-rs-024 feature
metrics_rs_024 = ["metrics-rs-024"]
metrics-rs-024 = ["dep:metrics_024", "dep:metrics-util_020"]
# Deprecated name of background-queue feature
background_queue = ["background-queue"]
background-queue = [
    "dep:tokio",
    "dep:crossbeam-queue",
    "dep:crossbeam-utils",
    "dep:tracing",
]
# Deprecated name of tracing-subscriber-03 feature
tracing_subscriber_03 = ["tracing-subscriber-03"]
tracing-subscriber-03 = ["dep:tracing-subscriber"]
ordered-float = ["dep:ordered-float"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
