[package]
name = "metrique"
version = "0.1.23"
edition = "2024"
license = "Apache-2.0"
description = "Library for generating unit of work metrics"
repository = "https://github.com/awslabs/metrique"
readme = "README.md"
rust-version = "1.89" # See build.yml for why this MSRV

[features]
default = ["service-metrics"]
# re-exports metrique-writer-format-emf as metrique::emf
emf = ["dep:metrique-writer-format-emf"]
# re-exports metrique-writer-format-json as metrique::json
json = ["dep:metrique-writer-format-json"]
# Human-readable local development format (pretty, JSON, markdown table)
local-format = ["dep:serde_json", "dep:jiff"]
# utilities for tests
test-util = ["metrique-writer/test-util", "metrique-writer-core/test-util", "metrique-metricsrs/test-util"]
# Private utilities for testing the formatter crates. 100% unstable, do not use outside of this workspace
# dep:tracing-appender and dep:tracing-subscriber is for rustdoc
private-test-util = ["dep:tracing-appender", "dep:tracing-subscriber"]
service-metrics = ["dep:metrique-service-metrics"]
# re-export metrique-writer features
metrics-rs-bridge = ["dep:metrique-metricsrs"]
metrics-rs-024 = ["metrique-writer/metrics-rs-024", "metrique-metricsrs/metrics-rs-024"]
metrics_rs_024 = ["metrics-rs-024"]

[dependencies]
tokio = { workspace = true, features = ["sync"] }
metrique-writer-core = { path = "../metrique-writer-core", version = "0.1.14" }
metrique-macro = { path = "../metrique-macro", version = "0.1.15" }
metrique-core = { path = "../metrique-core", version = "0.1.18" }
metrique-writer = { path = "../metrique-writer", version = "0.1.20" }
metrique-metricsrs = { path = "../metrique-metricsrs", version = "0.1.21", optional = true }
metrique-service-metrics = { path = "../metrique-service-metrics", version = "0.1.19", optional = true }
metrique-timesource = { path = "../metrique-timesource", version = "0.1.9" }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf", version = "0.1.19", optional = true }
metrique-writer-format-json = { path = "../metrique-writer-format-json", version = "0.1.2", optional = true }
metrique-writer-macro = { path = "../metrique-writer-macro", version = "0.1.8" }
tracing-appender = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
ryu = { workspace = true }
itoa = { workspace = true }
serde_json = { workspace = true, optional = true }
jiff = { workspace = true, optional = true }

[dev-dependencies]
assert2 = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
metrique-writer = { path = "../metrique-writer", features = ["test-util"] }
metrique-timesource = { path = "../metrique-timesource", features = [
    "custom-timesource",
    "tokio",
    "test-util",
] }
metrique-writer-core = { path = "../metrique-writer-core", features = [
    "private-test-util",
    "test-util",
] }
metrique-writer-format-emf = { path = "../metrique-writer-format-emf", features = [] }
tracing = { workspace = true }
tokio-util = { workspace = true, features = ["rt"] }
trybuild = { workspace = true }
rustversion = { workspace = true }
metrique = { path = ".", features = ["emf", "test-util", "local-format"] }
metrique-util = { path = "../metrique-util", features = ["state", "tokio-metrics-bridge"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
regex-lite = { workspace = true }
rstest = { workspace = true }

[[example]]
name = "global-state"
required-features = ["emf", "service-metrics"]
# Uses metrique-util (dev-dep only), which is unavailable during doc scraping on docs.rs
doc-scrape-examples = false

[[example]]
name = "json"
required-features = ["json"]

[[example]]
name = "tokio-metrics"
required-features = ["emf", "service-metrics"]
doc-scrape-examples = false

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
